# duplicate-logic-detector-action

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEEDBACK_COLLECTOR.md  LICENSE  Makefile  README.md  SIMPLE_EVAL_README.md  TESTING.md  USAGE.md  action.yml  config.example  eval_requirements.txt  eval_results.json  eval_simple.py  feedback-collector.js  feedback_analysis_report.md  package.json  pyproject.toml  run_tests.py  scripts.py  test-server.js
.github/workflows/: release.yml  test.yml
ast-grep/: config.yml
ast-grep/rules/python/duplicate-logic/: similar-function-patterns.yml
backup/embedded-duplicate-logic/: duplicate-business-logic.yml
config/: default-config.yml
examples/: basic-usage.yml  custom-thresholds.yml  django-project.yml  reusable-workflow.yml  similarity-methods.yml
scripts/: __init__.py  duplicate_logic_detector.py
scripts/action/: README.md  get-changed-files.sh  install-dependencies.sh  post-comment.js  run-detection.sh
scripts/dataset_generation/: EVALUATE_STRATEGIES.md  README.md  __init__.py  build_dataset.py  evaluate_strategies.py  generate_clones.py
scripts/dataset_generation/examples/: advanced_usage.sh  basic_usage.sh  config_template.yaml  evaluate_strategies_usage.sh  testing_workflow.py
scripts/duplicate_detector/: __init__.py  detector.py  extractor.py  main.py  models.py  reporters.py  similarity.py  thresholds.py
test_samples/: duplicate_code.py  original_code.py  similar_but_different.py
tests/: __init__.py  test_duplicate_detector.py
